# ai-assist-google-docs-adapter

./: .gitignore  AGENTS.md  README.md  TASKS.md  package.json  pyproject.toml
ai_assist_google_docs_adapter/: __init__.py  adapter.py  constants.py  document.py  errors.py  validation.py
src/: adapter.js  constants.js  document.js  errors.js  hash.js  index.js  validation.js
src/ai_assist_google_docs_adapter/: __init__.py  adapter.py  constants.py  document.py  errors.py  google_http_client.py  hash.py  http_app.py  orchestration_connector.py
test/: google-docs-adapter.test.js
tests/: common.py  test_adapter_provider_errors.py  test_adapter_read_context.py  test_adapter_resources.py  test_adapter_token_handoff.py  test_adapter_writeback.py  test_google_docs_adapter.py  test_google_http_client.py  test_http_app.py  test_orchestration_connector.py
